# starfield

./: .env  .env.python  .gitignore  .python-version  CLAUDE.md  Cargo.toml  LICENSE  README.md  jplephem.md  run_python_tests.sh  setup_python_env.sh  test_skyfield.py
.cargo/: config.toml
.github/workflows/: ci.yml
devops/: setup_pyenv.sh  verify_pyenv.sh
examples/: binary_catalog_info.rs  binary_catalog_viewer.rs  create_hip_binary.rs  feature_catalog_demo.rs  gaia_catalog.rs  gaia_downloader.rs  gaia_filter.rs  hipparcos.rs  magnitude_histogram.rs  skyfield_comparison.rs  synthetic_catalog.rs  timescale_demo.rs
src/: lib.rs
src/almanac/: mod.rs
src/catalogs/: binary_catalog.rs  gaia.rs  hipparcos.rs  mod.rs  synthetic.rs
src/catalogs/features/: mod.rs
src/celestial/: mod.rs
src/constants/: mod.rs
src/coordinates/: angle.rs  cartesian.rs  mod.rs
src/data/: downloader.rs  gaia_downloader.rs  mod.rs
src/earthlib/: mod.rs
src/errors/: mod.rs
src/framelib/: frame_rotations.rs  inertial.rs  mod.rs
src/image/: mod.rs
src/jplephem/: DAF-PSEUDO-RFC.md  calendar.rs  chebyshev.rs  daf.rs  errors.rs  mod.rs  names.rs  pck.rs  spk.rs  tests.rs
src/nutationlib/: mod.rs
src/planetlib/: mod.rs
src/positions/: mod.rs
src/precessionlib/: mod.rs
src/pybridge/: README.md  bridge.rs  helper.py  helpers.rs  mod.rs
src/pybridge/tests/: test_skyfield.py
src/time/: mod.rs
src/units/: mod.rs
tests/: helper.py  python_comparison.rs  test_exception_formatting.py
