[package]
name = "starfield"
version = "0.1.2"
edition = "2021"
authors = ["Matthew Goodman"]
description = "Star catalog and celestial mechanics calculations (inspired by skyfield)"
repository = "https://github.com/meawoppl/starfield"
license = "MIT"
readme = "README.md"
keywords = ["astronomy", "catalog", "stars", "celestial", "skyfield"]
categories = ["science"]

[dependencies]
# Core astronomical calculations
nalgebra = "0.32"           # Linear algebra
time = "0.3"                # Time handling
num = "0.4"                 # Numerical types
lazy_static = "1.4"         # Lazy initialization
ndarray = "0.15"            # N-dimensional arrays
num-traits = "0.2"          # Numeric traits

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Network and compression
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"                                          # GZip compression
rand = "0.8"                                            # Random number generation for synthetic data
md5 = "0.7"                                             # MD5 checksum calculation
regex = "1.10"                                          # Regular expressions for parsing
byteorder = "1.5"                                       # Binary data reading/writing

# Memory mapping and file I/O
memmap2 = "0.9"             # Memory mapping for efficient file access

# Error handling and utilities
thiserror = "1.0"
log = "0.4"
term_size = "0.3" # Terminal dimensions detection
chrono = "0.4.40"
base64 = "0.22.1"

# Python comparison tests
# These dependencies are only active when the python-tests feature is enabled
anyhow = { version = "1.0", optional = true }
pyo3 = { version = "0.19", optional = true } # Python bindings for testing against Python implementation
numpy = { version = "0.19", optional = true }

[dev-dependencies]
criterion = "0.5" # Benchmarking
approx = "0.5"    # Approximate equality assertions
rstest = "0.18"   # Test fixtures and parameterization
tempfile = "3.8"  # Temporary file creation for tests
# Dev dependencies

[features]
python-tests = ["pyo3", "numpy", "anyhow"]
